<resources>
    <string name="app_name">GymPro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_edit_admin">Editar perfil</string>
    <string name="action_change_language">Cambiar idioma</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_grupos">Grupos</string>
    <string name="menu_monitores">Monitores</string>
    <string name="menu_analisis">Analisis</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_pago">Pago</string>
</resources>