<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/clientes"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_grupos"
            android:icon="@drawable/grupos"
            android:title="@string/menu_grupos" />
        <item
            android:id="@+id/nav_monitores"
            android:icon="@drawable/monitores"
            android:title="@string/menu_monitores" />

        <item
            android:id="@+id/nav_analisis"
            android:icon="@drawable/analisis"
            android:title="@string/menu_analisis" />
    </group>
</menu>