<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="edu.pmdm.gympro.ui.inicio.InicioFragment"
        android:label="Inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_clientes"
        android:name="edu.pmdm.gympro.ui.clientes.ClientesFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/nav_grupos"
        android:name="edu.pmdm.gympro.ui.grupos.GruposFragment"
        android:label="@string/menu_grupos"
        tools:layout="@layout/fragment_grupos" />

    <fragment
        android:id="@+id/nav_monitores"
        android:name="edu.pmdm.gympro.ui.monitores.MonitoresFragment"
        android:label="@string/menu_monitores"
        tools:layout="@layout/fragment_monitores" />

    <fragment
        android:id="@+id/nav_analisis"
        android:name="edu.pmdm.gympro.ui.analisis.AnalisisFragment"
        android:label="Análisis"
        tools:layout="@layout/fragment_analisis" />
</navigation>